--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta content='width=device-width, initial-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="keywords" content="黑料网,黑料吃瓜,黑料吃瓜网,黑料泄密,黑料不打烊,51吃瓜,吃瓜黑料,最新地址" />
-    <meta name="description" content="欢迎访问91视频|91PORN地址发布页，为您提供黑料吃瓜网最新地址。" />
+    <meta name="description" content="欢迎访问黑料吃瓜网|黑料吃瓜网地址发布页，为您提供黑料吃瓜网最新地址。" />
     <link rel="shortcut icon" href="/favicon.ico" />
 </head>
 
